# ClawTerm

./: CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  index.html  install.sh  package-lock.json  package.json  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
docs/: 404.html  README.md  architecture.html  architecture.md  brand.html  brand.md  development.html  development.md  hashmap.json  index.html  index.md  site.webmanifest  sitemap.xml
docs/.vitepress/: config.ts
docs/assets/: app.B8Ym4LV_.js  app.BKbPqkOm.js  app.BNU2x7X0.js  app.BNz8sYih.js  app.BgdNdHZI.js  app.Bme26zRA.js  app.CKjYzrpD.js  app.DdwyNlzi.js  app.Dkvsd3uG.js  architecture.md.BCTu3X4C.js  architecture.md.BCTu3X4C.lean.js  (+187 more)
scripts/: lint-name.sh  lint-tokens.sh
src/: config.ts  logger.ts  main.ts  memory-diagnostics.ts  notification-settings.ts  notification-tray.ts  notifications.ts  osc-handler.ts  output-analyzer.ts  pane-webgl.ts  pane.ts  paste-confirm.ts  perf.ts  poll-throttle.ts  scroll-anchor.ts  search-bar.ts  shortcuts-overlay.ts  shortcuts-panel.ts  style.css  tab-renderer.ts  tab-state.ts  tab.ts  terminal-manager.ts  toast.ts  trust-gate.ts  updater.ts  utils.ts  window-manager.ts  worktree-actions.ts  worktree-dialog.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git_info.rs  main.rs  menu.rs  process_info.rs  worktree.rs
tests/: config-validation.test.ts  osc-handler.test.ts  pane-output-flow.test.ts  scroll-anchor.test.ts  tab-state.test.ts  trust-gate.test.ts
(+40 files in other folders)
