[package]
name = "clawterm"
version = "1.6.0"
description = "A terminal emulator for managing multiple AI agents"
homepage = "https://clawterm.github.io/clawterm"
repository = "https://github.com/clawterm/clawterm"
license = "MIT"
authors = ["ClawTerm Contributors"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-pty = { path = "plugins/tauri-plugin-pty" }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
libc = "0.2"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
